# scan-fonts

./: Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
examples/: example.rs
src/: font.rs  font_style.rs  iterator.rs  lib.rs
tests/: test.rs
